# asciiquarium-rs

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
.github/workflows/: release.yml
changes/: v0.1.0.md
src/: art.rs  entity.rs  lib.rs  main.rs  render.rs  spawn.rs
tests/: creatures.rs
tools/: README.md  extract.pl  generate.pl
