[package]
name = "asciiquarium"
version = "0.1.0-dev"
edition = "2021"
description = "An aquarium animation in ASCII art, ported to Rust"
license = "GPL-2.0-or-later"
readme = "README.md"

[[bin]]
name = "asciiquarium"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rand = "0.8"

[profile.release]
lto = true
strip = true
