[package]
name = "asciiquarium-rs"
version = "0.1.0-dev"
edition = "2021"
description = "An aquarium animation in ASCII art, ported to Rust"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/cablehead/asciiquarium-rs"
homepage = "https://github.com/cablehead/asciiquarium-rs"
keywords = ["ascii", "animation", "aquarium", "terminal", "tui"]
categories = ["command-line-utilities", "games"]

# Internal library name stays short so `use asciiquarium::...` is unchanged.
[lib]
name = "asciiquarium"
path = "src/lib.rs"

# The installed command is `asciiquarium-rs`, to avoid colliding with the Perl
# original (whose command is `asciiquarium`).
[[bin]]
name = "asciiquarium-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rand = "0.8"

[profile.release]
lto = true
strip = true
